# vjlive3

./: .clinerules  .coverage  .editorconfig  .env.example  .gitignore  .performance_baseline.json  .pre-commit-config.yaml  .roomodes  AGENT_SYNC.md  ARCHITECTURE.md  BOARD.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Dockerfile.production  GETTING_STARTED.md  LICENSE  Makefile  PRIME_DIRECTIVE.md  QUICK_REFERENCE.md  README.md  ROADMAP.md  SAFETY_RAILS.md  SECURITY.md  SWARM_RUNBOOK.md  VJLive3_The_Reckoning.code-workspace  analyze_specs.py  append_orphans.py  assign_stub_batch.py  board_core_append.txt  calculate_completion.py  check_queue.py  check_queue_simple.py  compare_core_specs.py  core_concepts_dump.txt  coverage.xml  current_plugins.txt  db_query.py  deleted_paths.txt  docker-compose.prod.yml  dump_qdrant_db.py  (+65 more)
.agent/workflows/: bespoke-plugin-migration.md  legacy-research.md  manager-job.md  no-stub-policy.md  overseer-job.md  phase-gate-check.md
.bin/: git  rm
.github/workflows/: ci.yml
.roo/: mcp.json  mcp.json.bak
COMMS/: AGENT_SYNC.md
WORKSPACE/: AGENT_AUTONOMY_GUIDELINES.md  AGENT_IDENTIFICATION.md  AGENT_SYNC.md  AUDIT_REPORT.md  AUTONOMOUS_PHASE1_PLAN.md  AUTONOMOUS_WORKFLOW_IMPLEMENTATION.md  AUTONOMOUS_WORKFLOW_PLAN.md  CHANGELOG.md  DEBRIEF_2026-03-03.md  DEFINITION_OF_DONE.md  EASTEREGG_COUNCIL.md  EVOLUTION_RULES.md  HARDENING_PLAN.md  HOW_TO_WORK.md  INCIDENT_REPORT_2026-02-23.md  INCIDENT_REPORT_2026-03-02.md  LOCK_SYSTEM_MIGRATION.md  MODULE_MANIFEST.md  NEXT_AGENT_README.md  PERF_NOTES.md  PRIME_DIRECTIVE.md  PROJECT_SUMMARY.md  ROO_CODE_MANAGER_INSTRUCTIONS.md  SAFETY_RAILS.md  SECURITY_AUDIT_2026-02-24.md  SPEC_PIPELINE.md  STYLE_GUIDE.md  TASK_COMPLETION_TEMPLATE.md  TESTING_STRATEGY.md  THE_DREAMER.md  VERIFICATION_CHECKPOINTS.md  VJlive-3.code-workspace  WORKER_20_AUDIENCE_INTEGRATION.md  WORKER_MANIFEST.md  claude.md  gemini.md  gemini_worker_instructions.md  manager-export.yaml  spec_tracker.db
WORKSPACE/AGENTS/: antigravity_agent_2.md  antigravity_agent_3.md  roo_code_manager.md  roo_code_worker.md  roo_coder_1.md  roo_coder_2.md
WORKSPACE/COMMS/: AGENT_SYNC.md  BREAKING_SUGGESTIONS.md  CREATIVE_SESSION.md  DECISIONS.md  DISPATCH.md  LOCKS.md  LOCKS_IMPROVED.md  QUEUE.json
WORKSPACE/INBOXES/: inbox_alpha.md  inbox_beta.md  inbox_gamma.md  inbox_p1-audio.md  inbox_p3-vd26.md  inbox_p3-vd27.md  inbox_p3-vd28.md  inbox_p3-vd29.md  inbox_p3-vd30.md  inbox_p3-vd31.md  inbox_p3-vd32.md  inbox_p3-vd33.md  inbox_p3-vd34.md  inbox_p3-vd35.md  inbox_p3-vd36.md  inbox_p3-vd37.md  inbox_p3-vd38.md  inbox_p3-vd39.md  inbox_p3-vd40.md  inbox_p3-vd41.md  inbox_p3-vd42.md  inbox_p3-vd43.md  inbox_p3-vd44.md  inbox_p3-vd45.md  inbox_p3-vd46.md  inbox_p3-vd47.md  inbox_p3-vd48.md  inbox_p3-vd49.md  inbox_p3-vd50.md  inbox_p3-vd51.md  inbox_p3-vd52.md  inbox_p3-vd53.md  inbox_p3-vd54.md  inbox_p3-vd55.md  inbox_p3-vd56.md  inbox_p3-vd57.md  inbox_p3-vd58.md  inbox_p3-vd59.md  inbox_p3-vd60.md  inbox_p3-vd61.md  (+167 more)
WORKSPACE/KNOWLEDGE/: DREAMER_LOG.md  IMPORT_MANIFEST.md  TOOL_TIPS.md
WORKSPACE/MEMORY_BANK/: ARCHITECTURE_FLOW_STRICT.md  Architecture.md  Architecture_Flow.md  PRD.md
WORKSPACE/ROLES/: MANAGER.md  WORKER.md
WORKSPACE/TRASH_CAN/: P0-G1_PRIME_DIRECTIVE.md.deletion-request.antigravity.20260301_035618  P0-G2_SAFETY_RAILS.md.deletion-request.antigravity.20260301_035618  P0-G6_spec.md.deletion-request.antigravity.20260301_035618  P0-G8_spec.md.deletion-request.antigravity.20260301_035618  P0-INF2_Depth_Parallel_Universe.md.deletion-request.antigravity.20260301_040323  P0-INF2_Depth_Portal_Composite.md.archived-duplicate-2026-03-03  P0-INF2_legacy_feature_parity.md.deletion-request.antigravity.20260223_122136  P0-INF2_spec.md.deletion-request.antigravity.20260301_040341  P0-INF4_core_logic_parity.md.deletion-request.antigravity.20260223_122136  P0-M1_spec.md.deletion-request.antigravity.20260301_040805  P0-S1_silicon_sigil.md.deletion-request.antigravity.20260223_122136  P1-A1_audio_analyzer.md.deletion-request.antigravity.20260223_122136  P1-A2_beat_detector.md  P1-A2_beat_detector.md.deletion-request.antigravity.20260223_122136  (+2940 more)
agent-heartbeat/: ROO_INSTRUCTIONS.md  batch_specs.py  code_validator.py  config.yaml  golden_example_vimana.py  heartbeat.py  heartbeat_header.py  ingest_codebases.py  legacy_lookup.py  local_llm_reviewer.py  locks.json  mcp_health_monitor.py  pick_task.py  queue_watcher.py  rejection_feedback.py  seed_queue.py  spec_cache.json  spec_gate.py  spec_server.py  stub_detector.py  task_plate_builder.py  test_5_specs.py  test_pipeline.py  validate_code.py  validator.py  watchdog.py  word_salad_detector.py
docs/: ARCHITECTURE_SUMMARY.md  NAME_REGISTRY.json  README.md  agents.md  audit_report_comprehensive.json  audit_summary.txt  gpu_context.md  implementation_plan.md  index.md  legacy_audit_checklist.md  legacy_audit_summary.md  legacy_reference_audit_report.txt  plugin_api.md  security_audit.md  spec_legacy_audit_report.json  specs_audit_checklist.txt  task_generation_summary.md  ui.md  unmatched_legacy_tasks.txt
mcp_servers/: __init__.py
scripts/: analyze_core.py  apply_fixes.py  audit_legacy_comprehensive.py  audit_legacy_parity_comprehensive.py  audit_project_state.py  audit_spec_legacy_references.py  build_spec_db.py  check_file_lock.py  check_file_size.py  check_naming.py  check_performance_regression.py  check_stubs.py  claim_pass2.py  claim_task.py  clean_decorators.py  clean_deleted_imports.py  clean_plugin_bases.py  clean_shader_program.py  cleanup_garbage_specs.py  client_test.py  create_task_completion.py  debug_audit.py  delete_non_legacy_specs.py  detect_stubs.py  enforce_strict_policy.py  enhance_spec_legacy_references.py  extract_tasks.py  find_missing_parity.py  fix_board_comprehensive.py  fix_board_final.py  fix_board_final_clean.py  fix_board_md.py  fix_board_simple.py  fix_easter_egg.py  gen_datamosh_plugins.py  gen_datamosh_plugins_2.py  gen_p6_plugins.py  gen_p7_plugins.py  generate_skeletons.py  generate_tasks_from_audit.py  (+31 more)
src/: test_import.py
tests/: __init__.py  conftest.py
(+2003 files in other folders)
