[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "vjlive3"
version = "0.1.0"
description = "Professional VJLive3 (The Reckoning) - Next Generation Visual Performance System"
authors = [
    {name = "VJLive Team", email = "team@vjlive.com"}
]
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
keywords = ["vj", "live", "visual", "performance", "graphics"]
dependencies = [
    # Core scientific & image processing
    "numpy>=1.24.0",
    "opencv-python>=4.8.0",
    "opencv-python-headless>=4.8.0",
    "pillow>=10.0.0",
    "scipy>=1.11.0",
    "matplotlib>=3.8.0",
    
    # Real-time GPU rendering (OpenGL)
    "PyOpenGL>=3.1.6",
    "glfw>=2.5.0",
    "moderngl>=5.8.0",
    
    # Audio processing & analysis
    "sounddevice>=0.4.0",
    "librosa>=0.10.0",
    
    # Video streaming & output
    "py-ndi>=1.2.0",
    "av>=10.0.0",
    
    # Hardware integration (MIDI, OSC, DMX)
    "python-rtmidi>=1.5.0",
    "mido>=1.3.0",
    "python-osc>=1.8.0",
    "pyusb>=1.2.0",
    
    # Web API & real-time communication
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "python-multipart>=0.0.6",
    "websockets>=12.0.0",
    "flask>=3.0.0",
    "flask-socketio>=5.3.0",
    "eventlet>=0.33.0",
    
    # Configuration & validation
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.0.0",
    "PyYAML>=6.0",
    
    # System & utilities
    "psutil>=5.9.0",
    "mss>=9.0.0",
    "requests>=2.31.0",
    "tqdm>=4.65.0",
    "watchdog>=3.0.0",
    "networkx>=3.1",
    "SQLAlchemy>=2.0.0",
    
    # Logging & debugging
    "loguru>=0.7.0",
    "rich>=13.0.0",
    "click>=8.1.0",
    
    # Game/controller support
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-asyncio>=0.21.0",
    "pytest-mock>=3.12.0",
    "pytest-xdist>=3.2.0",
    "pytest-benchmark>=4.0.0",
    "pytest-qt>=4.2.0",
    "pytest-timeout>=2.1.0",
    "hypothesis>=6.70.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "ruff>=0.1.0",
    "mypy>=1.5.0",
    "bandit>=1.7.0",
    "safety>=2.3.0",
    "pre-commit>=3.4.0",
    "tox>=4.0.0",
    "tox-gh-actions>=3.0.0",
]

[tool.black]
line-length = 88
target-version = ['py39']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
line_length = 88
multi_line_output = 3
include_trailing_comma = true
force_grid_wrap = 0
use_parentheses = true
ensure_newline_before_comments = true
skip_gitignore = true

[tool.ruff]
target-version = "py39"
line-length = 88
select = [
    "E",  # pycodestyle errors
    "W",  # pycodestyle warnings
    "F",  # pyflakes
    "I",  # isort
    "C",  # flake8-comprehensions
    "B",  # flake8-bugbear
    "UP", # pyupgrade
    "SIM", # flake8-simplify
    "TID", # flake8-tidy-imports
    "RUF", # Ruff-specific rules
]
ignore = [
    "E501",  # line too long (handled by black)
    "B008",  # do not perform function calls in argument defaults
    "C901",  # too complex
]
exclude = [
    ".git",
    "__pycache__",
    ".tox",
    ".venv",
    "build",
    "dist",
]

[tool.ruff.per-file-ignores]
"tests/*" = ["B", "UP", "SIM", "TID"]

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true
show_error_codes = true
pretty = true

[[tool.mypy.overrides]]
module = [
    "numpy.*",
    "cv2.*",
    "PIL.*",
    "scipy.*",
    "matplotlib.*",
]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = [
    "--strict-markers",
    "--strict-config",
    "--tb=short",
    "--cov=src/vjlive3",
    "--cov-report=term-missing",
    "--cov-report=html",
    "--cov-report=xml",
    "--cov-fail-under=80",
]

[tool.coverage.run]
branch = true
source = ["src/vjlive3"]
omit = [
    "tests/*",
    "*/migrations/*",
    "*/venv/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "if TYPE_CHECKING:",
]

[setuptools]
package-dir = {"" = "src"}
packages = ["vjlive3"]